Some fixes and improving readability

--- a/Style/base.css
+++ b/Style/base.css
@@ -78,7 +78,7 @@
 	line-height: 111%;
 }
 
-.space-title p {
+.space-title a {
 	font-weight: 400;
 	font-size: 13px;
 	letter-spacing: 0.11em;
