--- a/Style/main.css
+++ b/Style/main.css
@@ -202,7 +202,12 @@
 	width: 100%; /* Делаем ширину в четыре раза больше (по количеству слайдов) */
 	transition: transform 0.5s ease-in-out; /* Плавное переключение слайдов */
 
-	gap: 25px;
+	gap: 20px; /* Отхождение от дизайна ради лучшего восприятия(в дизайне 25px) */
+}
+
+.slides::before,
+.slides::after {
+	content: '';
 }
 
 /* Настройка товара */
